--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext {
     iiifVocabularyVersion = '0.1.1'
     jacksonVersion = '2.9.5'
     jsonldVersion = "0.12.0"
-    trellisClientVersion = '0.3.0-SNAPSHOT'
+    trellisClientVersion = '0.2.0-SNAPSHOT'
 
     /* Testing */
     jaxbVersion = '2.3.0'
@@ -47,7 +47,15 @@ ext {
     checkstyleVersion = '8.8'
 }
 
-configure(allprojects) { project ->
+allprojects { subproject ->
+    apply plugin: 'com.zyxist.chainsaw'
+    apply plugin: 'maven'
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+    apply plugin: 'checkstyle'
+    apply plugin: 'com.github.hierynomus.license'
+    apply plugin: 'org.junit.platform.gradle.plugin'
 
     ext {
         name = 'Manifest Metadata Processor API'
@@ -68,32 +76,26 @@ configure(allprojects) { project ->
             url 'https://oss.sonatype.org/content/repositories/snapshots'
         }
     }
-}
-
-subprojects {
-    apply plugin: 'com.zyxist.chainsaw'
-    apply plugin: 'maven'
-    apply plugin: 'java-library'
-    apply plugin: 'maven-publish'
-    apply plugin: 'signing'
-    apply plugin: 'checkstyle'
-    apply plugin: 'com.github.hierynomus.license'
-    apply plugin: 'org.junit.platform.gradle.plugin'
-
-
-    sourceCompatibility = 1.10
-    targetCompatibility = 1.10
 
     dependencies {
         testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
         testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
     }
 
+    junitPlatformTest.jvmArgs("--add-modules", "jdk.incubator.httpclient")
+
+}
+
+subprojects {
+
+    sourceCompatibility = 1.10
+    targetCompatibility = 1.10
+
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
             options.compilerArgs.add("-Xlint:unchecked")
             options.compilerArgs.add("-Xlint:deprecation")
-            options.compilerArgs.addAll(["--add-modules", "java.xml.bind", "--add-modules", "java.naming"])
+            options.compilerArgs.addAll(["--add-modules", "java.xml.bind", "--add-modules", "jdk.incubator.httpclient"])
         }
     }
 
