--- a/src/main/resources/cfg/de.ubleipzig.metadata.processor.cfg
+++ b/src/main/resources/cfg/de.ubleipzig.metadata.processor.cfg
@@ -14,10 +14,6 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-api.host=dynamo
-api.port=9095
-api.prefix=/dynamo
-triplestore.baseUrl=fuseki:3030/fuseki/trellis/query
-trellis.FQDN=http://some.testdomain.org
-redis.host=localhost
-redis.port=6379
+api.host=extractor
+api.port=9098
+api.prefix=/extractor
