--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -15,10 +15,12 @@ services:
         hard: -1
     volumes:
       - esdata1:/usr/share/elasticsearch/data
+      - ./cfg/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
       - 9100:9200
     networks:
       - esnet
+    restart: always
   elasticsearch2:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.2.2
     container_name: elasticsearch2
