--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation("org.apache.httpcomponents:httpclient-cache:$httpClientOsgiVersion")
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
 
+    testImplementation("com.itextpdf:io:7.1.2")
+    testImplementation("com.itextpdf:layout:7.1.2")
+
     testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
     testImplementation("org.apache.camel:camel-test:$camelVersion")
     testImplementation("org.apache.camel:camel-jetty9:$camelVersion")
