--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'application'
 
-mainClassName = 'de.ubleipzig.metadata.processor.Extractor'
+mainClassName = 'de.ubleipzig.metadata.processor.Processor'
 description = 'A Camel service that assembles manifests from RDF queries'
 
 javaModule {
-    name = 'de.ubleipzig.metadata.extractor'
+    name = 'de.ubleipzig.metadata.processor'
     extraTestModules = ['jdk.incubator.httpclient']
 }
 
@@ -22,17 +22,22 @@ configurations {
 
 dependencies {
 
-    implementation project(":processor")
-    implementation project(":templates")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion") {force = true}
+    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {force = true}
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {force = true}
     implementation("com.github.jsonld-java:jsonld-java:$jsonldVersion")
     implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
     implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
     implementation("org.apache.camel:camel-jetty9:$camelVersion")
     implementation("org.apache.camel:camel-http4:$camelVersion")
+    implementation("org.apache.camel:camel-spring-redis:$camelVersion")
     implementation("org.apache.httpcomponents:httpclient-cache:$httpClientOsgiVersion")
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
+
+    testImplementation("com.itextpdf:io:7.1.2")
+    testImplementation("com.itextpdf:layout:7.1.2")
 
     testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
     testImplementation("org.apache.camel:camel-test:$camelVersion")
@@ -42,7 +47,7 @@ dependencies {
 }
 
 artifacts {
-    archives (file('build/cfg/main/de.ubleipzig.metadata.extractor.cfg')) {
+    archives (file('build/cfg/main/de.ubleipzig.metadata.processor.cfg')) {
         classifier 'configuration'
         type 'cfg'
     }
