--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'application'
 
-mainClassName = 'de.ubleipzig.metadata.processor.Extractor'
+mainClassName = 'de.ubleipzig.metadata.processor.Renderer'
 description = 'A Camel service that assembles manifests from RDF queries'
 
 javaModule {
-    name = 'de.ubleipzig.metadata.extractor'
-    extraTestModules = ['jdk.incubator.httpclient']
+    name = 'de.ubleipzig.metadata.renderer'
 }
 
 configurations {
@@ -21,18 +20,19 @@ configurations {
 }
 
 dependencies {
-
     implementation project(":processor")
     implementation project(":templates")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("com.github.jsonld-java:jsonld-java:$jsonldVersion")
+    implementation("com.itextpdf:io:7.1.2")
+    implementation("com.itextpdf:layout:7.1.2")
     implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
     implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
     implementation("org.apache.camel:camel-jetty9:$camelVersion")
     implementation("org.apache.camel:camel-http4:$camelVersion")
     implementation("org.apache.httpcomponents:httpclient-cache:$httpClientOsgiVersion")
-    implementation("org.trellisldp:trellis-client:$trellisClientVersion")
+
 
     testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
     testImplementation("org.apache.camel:camel-test:$camelVersion")
@@ -42,7 +42,7 @@ dependencies {
 }
 
 artifacts {
-    archives (file('build/cfg/main/de.ubleipzig.metadata.extractor.cfg')) {
+    archives (file('build/cfg/main/de.ubleipzig.metadata.renderer.cfg')) {
         classifier 'configuration'
         type 'cfg'
     }
