--- a/src/main/resources/extractor/Dockerfile
+++ b/src/main/resources/extractor/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 MAINTAINER Christopher Johnson <christopher_hanna.johnson@uni-leipzig.de>
-LABEL description = "Provides Manifest Metadata Extractor"
+LABEL description = "Provides de.ubleipzig.metadata.templates.Manifest Metadata Extractor"
 
 ENV EXTRACTOR_VERSION 0.3.0-SNAPSHOT
 ENV EXTRACTOR_RUNTIME /opt
