--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
 rootProject.name = 'manifest-metadata-processor'
 include 'extractor'
+include 'indexer'
 include 'processor'
 include 'renderer'
 include 'templates'
 project(':extractor').projectDir = "$rootDir/extractor" as File
+project(':indexer').projectDir = "$rootDir/indexer" as File
 project(':processor').projectDir = "$rootDir/processor" as File
 project(':renderer').projectDir = "$rootDir/renderer" as File
 project(':templates').projectDir = "$rootDir/templates" as File
