--- a/indexer/build.gradle
+++ b/indexer/build.gradle
@@ -1,3 +1,7 @@
+javaModule {
+    name = 'de.ubleipzig.metadata.indexer'
+}
+
 dependencies {
     implementation project(":processor")
     implementation project(":templates")
