adds processBinaryMetadataExchange API

--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -25,9 +25,11 @@ dependencies {
     implementation project(":processor")
     implementation project(":templates")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
+    implementation("de.ubleipzig:image.metadata:$imageMetadataVersion")
     implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
     implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
+    implementation("commons-io:commons-io:$commonsIoVersion")
     implementation("org.apache.camel:camel-jetty9:$camelVersion")
     implementation("org.apache.camel:camel-http4:$camelVersion")
     implementation("org.apache.httpcomponents:httpclient-cache:$httpClientOsgiVersion")
