--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,11 @@ plugins {
 ext {
     /* Dependencies */
     camelVersion = '2.21.0'
+    commonsIoVersion = '2.6'
     commonsRdfVersion = '0.5.0'
     commonsRdfJenaVersion = '1.0.0-SNAPSHOT'
     elasticsearchVersion = '6.2.2'
+    imageMetadataVersion = '0.2.0-SNAPSHOT'
     iiifVocabularyVersion = '0.1.1'
     jacksonVersion = '2.9.5'
     jsonldVersion = "0.12.0"
