--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'application'
+apply plugin: 'com.zyxist.chainsaw'
 
 mainClassName = 'de.ubleipzig.metadata.renderer.Renderer'
 description = 'A Camel service that assembles manifests from RDF queries'
