--- a/templates/build.gradle
+++ b/templates/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.zyxist.chainsaw'
 
 dependencies {
+    implementation("de.ubleipzig:iiif.vocabulary:$iiifVocabularyVersion")
     implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion") {force = true}
     implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {force = true}
     implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {force = true}
