adds Resource Bundle functions for multilingual metadata labels

--- a/src/main/resources/extractor/cfg/de.ubleipzig.metadata.extractor.cfg
+++ b/src/main/resources/extractor/cfg/de.ubleipzig.metadata.extractor.cfg
@@ -17,4 +17,4 @@
 api.host=extractor
 api.port=9098
 api.prefix=/extractor
-xmldb.host=http://workspaces.ub.uni-leipzig.de:8900
+xmldb.host=exist:8080
