refactors metadata api into transformer module adds structures and metadata to producer adds docker file and configuration for producer

--- a/producer/build.gradle
+++ b/producer/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
     implementation project(":processor")
     implementation project(":templates")
+    implementation project(":extractor")
+    implementation project(":transformer")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("de.ubleipzig:iiif.vocabulary:$iiifVocabularyVersion")
     implementation("de.ubleipzig:image.metadata:$imageMetadataVersion")
