--- a/producer/src/main/resources/producer-config.yml
+++ b/producer/src/main/resources/producer-config.yml
@@ -14,3 +14,7 @@ rangeContext: "/range"
 license: "https://creativecommons.org/publicdomain/mark/1.0/"
 attributionLicenseNote: "No Copyright - Public Domain Marked"
 attributionKey: "Provided by "
+resourceType: "dctypes:Image"
+resourceFormat: "image/jpeg"
+resourceFileExtension: ".jpg"
+viewingHint: "paged"
