--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include ':processor'
 include ':producer'
 include ':renderer'
 include ':templates'
+include ':transformer'
 
 project(':extractor').projectDir = "$rootDir/extractor" as File
 project(':indexer').projectDir = "$rootDir/indexer" as File
@@ -12,3 +13,4 @@ project(':processor').projectDir = "$rootDir/processor" as File
 project(':producer').projectDir = "$rootDir/producer" as File
 project(':renderer').projectDir = "$rootDir/renderer" as File
 project(':templates').projectDir = "$rootDir/templates" as File
+project(':transformer').projectDir = "$rootDir/transformer" as File
