--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     implementation project(":processor")
     implementation project(":templates")
+    implementation project(":transformer")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("de.ubleipzig:iiif.vocabulary:$iiifVocabularyVersion")
     implementation("de.ubleipzig:image.metadata:$imageMetadataVersion")
