--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - esnet
   kibana:
     image: docker.elastic.co/kibana/kibana:6.2.2
+    container_name: kibana
     ports:
       - 5601:5601
     networks:
