--- a/indexer/build.gradle
+++ b/indexer/build.gradle
@@ -1,4 +1,23 @@
+apply plugin: 'application'
 apply plugin: 'com.zyxist.chainsaw'
+mainClassName = 'de.ubleipzig.metadata.indexer.Indexer'
+
+javaModule {
+    name = 'de.ubleipzig.metadata.indexer'
+    extraTestModules = ['jdk.incubator.httpclient']
+}
+
+configurations {
+    all {
+        exclude(group: 'commons-logging', module: 'commons-logging')
+        exclude(group: 'org.apache.camel', module: 'camel-core-osgi')
+        exclude group: 'com.sun.xml.bind', module: 'jaxb-core'
+        exclude group: 'com.sun.xml.bind', module: 'jaxb-impl'
+        exclude group: 'javax.inject', module: 'javax.inject'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient-osgi'
+        exclude group: 'org.apache.httpcomponents', module: 'httpcore-osgi'
+    }
+}
 
 dependencies {
     implementation project(":processor")
@@ -9,4 +28,11 @@ dependencies {
     implementation("org.xmlbeam:xmlprojector:$xbeamVersion")
     implementation("org.slf4j:slf4j-api:$slf4jVersion")
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
+    implementation("org.apache.commons:commons-collections4:4.2")
+
+
+    testImplementation("org.apache.camel:camel-test:$camelVersion")
+    testImplementation("org.apache.camel:camel-jetty9:$camelVersion")
+    testImplementation("org.apache.camel:camel-http4:$camelVersion")
+    testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
 }
