update to JDK11

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+enableFeaturePreview('STABLE_PUBLISHING')
 rootProject.name = 'manifest-metadata-processor'
 include ':extractor'
 include ':indexer'
