--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,9 +1,3 @@
-apply plugin: 'com.zyxist.chainsaw'
-
-javaModule {
-    name = 'de.ubleipzig.metadata.processor'
-}
-
 configurations {
     all {
         exclude(group: 'commons-logging', module: 'commons-logging')
@@ -23,8 +17,8 @@ dependencies {
     implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {force = true}
     implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {force = true}
     implementation("com.github.jsonld-java:jsonld-java:$jsonldVersion")
-    implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
     implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
+    implementation("org.slf4j:slf4j-api:$slf4jVersion")
     implementation("org.apache.camel:camel-core:$camelVersion")
 }
