--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'application'
-apply plugin: 'com.zyxist.chainsaw'
 
-mainClassName = 'de.ubleipzig.metadata.renderer.Renderer'
 description = 'A Camel service that assembles manifests from RDF queries'
 
-javaModule {
-    name = 'de.ubleipzig.metadata.renderer'
+application {
+    mainClass = 'de.ubleipzig.metadata.renderer.Renderer'
+    mainModule = 'de.ubleipzig.metadata.renderer'
 }
 
 configurations {
@@ -29,7 +28,6 @@ dependencies {
     implementation("com.itextpdf:layout:7.1.2")
     implementation("commons-io:commons-io:2.6")
 
-    implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
     implementation("javax.xml.bind:jaxb-api:$jaxbVersion")
     implementation("org.apache.camel:camel-jetty9:$camelVersion")
