--- a/transformer/build.gradle
+++ b/transformer/build.gradle
@@ -1,9 +1,3 @@
-apply plugin: 'com.zyxist.chainsaw'
-
-javaModule {
-    name = 'de.ubleipzig.metadata.transformer'
-}
-
 configurations {
     all {
         exclude(group: 'commons-logging', module: 'commons-logging')
@@ -21,11 +15,16 @@ dependencies {
     implementation project(":processor")
     implementation project(":templates")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
+    implementation 'org.apache.commons:commons-rdf-api:0.5.0'
+    implementation 'org.apache.commons:commons-rdf-jena:0.5.0'
+    implementation 'org.apache.jena:jena-arq:4.3.2'
+    implementation 'org.apache.jena:jena-core:4.3.2'
+    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {force = true}
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {force = true}
     implementation("de.ubleipzig:iiif.vocabulary:$iiifVocabularyVersion")
     implementation("de.ubleipzig:image.metadata:$imageMetadataVersion")
-    implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("commons-io:commons-io:$commonsIoVersion")
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
-    testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
+    testImplementation 'org.apache.jena:jena-core:4.3.2'
     testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
 }
