--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,8 +1,3 @@
-apply plugin: 'com.zyxist.chainsaw'
-
-javaModule {
-    name = 'de.ubleipzig.metadata.processor'
-}
 
 configurations {
     all {
@@ -19,9 +14,9 @@ configurations {
 dependencies {
 
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
-    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion") {force = true}
-    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {force = true}
-    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {force = true}
+    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
+    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("com.github.jsonld-java:jsonld-java:$jsonldVersion")
     implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
     implementation("javax.activation:javax.activation-api:$activationApiVersion")
