--- a/transformer/build.gradle
+++ b/transformer/build.gradle
@@ -1,6 +1,6 @@
 
 configurations {
-    all {
+    configureEach {
         exclude(group: 'commons-logging', module: 'commons-logging')
         exclude(group: 'org.apache.camel', module: 'camel-core-osgi')
         exclude group: 'com.sun.xml.bind', module: 'jaxb-core'
@@ -15,12 +15,14 @@ dependencies {
 
     implementation project(":processor")
     implementation project(":templates")
+    implementation("org.apache.jena:jena-commonsrdf:$commonsRdfJenaVersion")
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("de.ubleipzig:iiif.vocabulary:$iiifVocabularyVersion")
     implementation("de.ubleipzig:image.metadata:$imageMetadataVersion")
-    implementation("de.ubleipzig:commons-rdf-jena-jpms:$commonsRdfJenaVersion")
-    implementation("commons-io:commons-io:$commonsIoVersion")
+    implementation("org.apache.jena:jena-commonsrdf:$commonsRdfJenaVersion")
+    implementation("commons-io:commons-io:2.7")
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
-    testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
+    testImplementation("org.apache.jena:jena.core:$jenaVersion")
     testImplementation("ch.qos.logback:logback-classic:$logbackVersion")
 }
