--- a/producer/build.gradle
+++ b/producer/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation("org.trellisldp:trellis-client:$trellisClientVersion")
     implementation("org.xmlbeam:xmlprojector:$xbeamVersion")
 
-    testImplementation("de.ubleipzig:jena.core-jpms:$jenaVersion")
+    testImplementation("org.apache.jena:jena-core:$jenaVersion")
     testImplementation("org.apache.camel:camel-test:$camelVersion")
     testImplementation("org.apache.camel:camel-jetty9:$camelVersion")
     testImplementation("org.apache.camel:camel-http4:$camelVersion")
